<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    >

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="40dp"
    android:gravity="center"
    >

        <TextView
            android:id="@+id/textNameAppLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="serif"
            android:text="@string/textTitleCalculator"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/logoAppLogin"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/etConsumptionWater"
            style="@style/EditTextRounded"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:fontFamily="serif"
            android:hint="@string/textDirectConsumption"
            android:inputType="number"
            android:textColor="@color/black"
            android:textSize="16sp"
            />

        <EditText
            android:id="@+id/etTypeDiet"
            style="@style/EditTextRounded"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:fontFamily="serif"
            android:hint="@string/textTypeDiet"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="16sp"
        />
        <EditText
            android:id="@+id/etConsumptionFood"
            style="@style/EditTextRounded"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:fontFamily="serif"
            android:hint="@string/textConsumptionFood"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="16sp"
        />

        <EditText
            android:id="@+id/etConsumptionHabits"
            style="@style/EditTextRounded"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:fontFamily="serif"
            android:hint="@string/textConsumptionHabits"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="16sp"
            />

        <Button
            android:id="@+id/buttonEditProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="30dp"
            android:backgroundTint="@color/white"
            android:fontFamily="serif"
            android:text="@string/textEnterData"
            android:textSize="25sp"
            android:textColor="@color/blue2"
            app:strokeColor="@color/blue2"
            app:strokeWidth="3dp"
            />










    </LinearLayout>


    </ScrollView>