<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    >

    <ImageView
        android:id="@+id/logoAppHome"
        android:layout_width="222dp"
        android:layout_height="205dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.184"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textWelcomeHome"
        android:layout_width="363dp"
        android:layout_height="111dp"
        android:layout_marginTop="412dp"
        android:fontFamily="serif"
        android:text="@string/textWelcomeHome"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textNameAppHome"
        android:layout_width="320dp"
        android:layout_height="56dp"
        android:layout_marginTop="340dp"
        android:fontFamily="serif"
        android:text="@string/appName"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonBeginHome"
        android:layout_width="259dp"
        android:layout_height="65dp"
        android:layout_marginBottom="140dp"
        android:backgroundTint="@color/white"
        android:fontFamily="serif"
        android:text="@string/textBeginHome"
        android:textSize="34sp"
        android:textColor="@color/blue2"
        app:strokeColor="@color/blue2"
        app:strokeWidth="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/textRegisterHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="serif"
        android:text="@string/textRegisterHome"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBeginHome" />

</androidx.constraintlayout.widget.ConstraintLayout>